# src/swaggerOutput.json
@@ -72,6 +72,34 @@
       }
     },
     "/marca/": {
+      "post": {
+        "tags": [
+          "Marca"
+        ],
+        "summary": "Cadastra marcas",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/marca"
+              }
+            }
+          }
+        }
+      },
       "get": {
         "tags": [
           "Marca"
@@ -186,6 +214,18 @@
         },
         "xml": {
           "name": "produto"
+        }
+      },
+      "marca": {
+        "type": "object",
+        "properties": {
+          "nome": {
+            "type": "string",
+            "example": "AMD"
+          }
+        },
+        "xml": {
+          "name": "marca"
         }
       }
     }
